commit-add-icons

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <a class="img logo rounded-circle mb-5" style="background-image: url(images/logo2.jpg)"></a>
         <ul class="list-unstyled components mb-5">
           <li>
-            <a href="#section-about">Sobre mi</a>
+            <a href="#section-about">Sobre mí</a>
           </li>
           <li>
             <a href="#section-experience">Experiencia</a>
@@ -327,19 +327,19 @@
           </thead>
           <tbody>
             <tr>
-              <th scope="row">INGENIERÍA EN INFORMÁTICA</th>
+              <th scope="row">🏆&nbsp;INGENIERÍA EN INFORMÁTICA</th>
               <td>DUOC UC</td>
               <td>MARZO 2012</td>
               <td>JUNIO 2016</td>
             </tr>
             <tr>
-              <th scope="row">EDUCACIÓN MEDIA</th>
+              <th scope="row">🏆&nbsp;EDUCACIÓN MEDIA</th>
               <td>COLEGIO JOSÉ AGUSTÍN ALFONSO</td>
               <td>MARZO 2006</td>
               <td>DICIEMBRE 2009</td>
             </tr>
             <tr>
-              <th scope="row">EDUCACION BÁSICA</th>
+              <th scope="row">🏆&nbsp;EDUCACION BÁSICA</th>
               <td>COLEGIO JOSÉ AGUSTÍN ALFONSO</td>
               <td>MARZO 1998</td>
               <td>DICIEMBRE 2005</td>
@@ -354,64 +354,45 @@
       <section id="section-courses">
         <h2 class="mb-4"><i class="fas fa-university"></i>&nbsp;CURSOS Y FORMACI&Oacute;N REGLADA</h2>
         <p class="lead mb-5">
-        <table>
-          <tr>
-            <td>
-              <h4 class="mb-4">🏆&nbsp;SCRUM FOUNDATION PROFESSIONAL CERTIFICATE</h4>
-            </td>
-            <td>
-              <h6 class="mb-4"> &nbsp;| &nbsp;CERTIPROF - JUNIO 2020</h6>
-            </td>
-          </tr>
-        </table>
-        </p>
-        <p class="lead mb-5">
-        <table>
-          <tr>
-            <td>
-              <h4 class="mb-4">🏆&nbsp;SCRUM MASTER PROFESSIONAL CERTIFICATE</h4>
-            </td>
-            <td>
-              <h6 class="mb-4"> &nbsp;| &nbsp;CERTIPROF - MAYO 2018</h6>
-            </td>
-          </tr>
-        </table>
-        </p>
-        <p class="lead mb-5">
-        <table>
-          <tr>
-            <td>
-              <h4 class="mb-4">🏆&nbsp;SCRUM DEVELOPER PROFESSIONAL CERTIFICATE</h4>
-            </td>
-            <td>
-              <h6 class="mb-4"> &nbsp;| &nbsp;CERTIPROF - JUNIO 2018</h6>
-            </td>
-          </tr>
-        </table>
-        </p>
-        <p class="lead mb-5">
-        <table>
-          <tr>
-            <td>
-              <h4 class="mb-4">🏆&nbsp;DEVELOPING AZURE SOLUTIONS</h4>
-            </td>
-            <td>
-              <h6 class="mb-4"> &nbsp;| &nbsp;SONDA - DICIEMBRE 2017</h6>
-            </td>
-          </tr>
-        </table>
-        </p>
-        <p class="lead mb-5">
-        <table>
-          <tr>
-            <td>
-              <h4 class="mb-4">🏆&nbsp;ASISTENTE ADMINISTRATIVO CON INGLÉS BÁSICO</h4>
-            </td>
-            <td>
-              <h6 class="mb-4"> &nbsp;| &nbsp;INACAP - DICIEMBRE 2009</h6>
-            </td>
-          </tr>
-        </table>
+          <table class="table table-striped">
+            <thead>
+              <tr>
+                <th scope="col">EDUCACIÓN</th>
+                <th scope="col">INSTITUCION</th>
+                <th scope="col">FECHA</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th scope="row">🏆&nbsp;SCRUM FOUNDATION PROFESSIONAL CERTIFICATE</th>
+                <td>CERTIPROF</td>
+                <td>JUNIO 2020</td>
+              </tr>
+              <tr>
+                <th scope="row">🏆&nbsp;SCRUM MASTER PROFESSIONAL CERTIFICATE</th>
+                <td>CERTIPROF</td>
+                <td>MAYO 2018</td>
+              </tr>
+              <tr>
+                <th scope="row">🏆&nbsp;SCRUM DEVELOPER PROFESSIONAL CERTIFICATE</th>
+                <td>CERTIPROF</td>
+                <td>JUNIO 2018</td>
+              </tr>
+
+              <tr>
+                <th scope="row">🏆&nbsp;DEVELOPING AZURE SOLUTIONS</th>
+                <td>SONDA</td>
+                <td>DICIEMBRE 2017</td>
+              </tr>
+
+              <tr>
+                <th scope="row">🏆&nbsp;ASISTENTE ADMINISTRATIVO CON INGLÉS BÁSICO</th>
+                <td>INACAP</td>
+                <td>DICIEMBRE 2009</td>
+              </tr>
+            </tbody>
+          </table>
+ 
         </p>
         <br />
 
@@ -692,7 +673,7 @@
           <div class="col-sm-3">
             <div class="card">
               <div class="card-body">
-                <h5 class="card-title">CUBO VENTAS</h5>
+                <h5 class="card-title"><i class="fas fa-cube"></i>&nbsp;CUBO VENTAS</h5>
                 <p class="card-text">Cubo con las ventas hístóricas de la empresa.</p>
                 <button type="button" class="btn btn-info" data-toggle="modal" data-target="#cuboModal">
                   Detalle
@@ -703,7 +684,7 @@
           <div class="col-sm-3">
             <div class="card">
               <div class="card-body">
-                <h5 class="card-title">OMNIX</h5>
+                <h5 class="card-title"><i class="fas fa-truck"></i>&nbsp;OMNIX</h5>
                 <p class="card-text">Implementación de un OMS para la gestión de órdenes.</p>
                 <button type="button" class="btn btn-info" data-toggle="modal" data-target="#omnixModal">
                   Detalle
@@ -714,7 +695,7 @@
           <div class="col-sm-3">
             <div class="card">
               <div class="card-body">
-                <h5 class="card-title">CAMBIO POS</h5>
+                <h5 class="card-title"><i class="far fa-credit-card"></i>&nbsp;CAMBIO POS</h5>
                 <p class="card-text">Implementación de nuevo Punto de Ventas para las tiendas físicas.</p>
                 <button type="button" class="btn btn-info" data-toggle="modal" data-target="#posModal">
                   Detalle
@@ -725,7 +706,7 @@
           <div class="col-sm-3">
             <div class="card">
               <div class="card-body">
-                <h5 class="card-title">GUADARROPÍA WALMART</h5>
+                <h5 class="card-title"><i class="fas fa-tshirt"></i>&nbsp;GUADARROPÍA WALMART</h5>
                 <p class="card-text">Aplicación para enrolamiento de usuarios y gestión de sus uniformes.</p>
                 <button type="button" class="btn btn-info" data-toggle="modal" data-target="#gwalmartModal">
                   Detalle
@@ -740,7 +721,7 @@
           <div class="col-sm-3">
             <div class="card">
               <div class="card-body">
-                <h5 class="card-title">ACTUALIZACIÓN WEB VENTAS</h5>
+                <h5 class="card-title"><i class="fab fa-chrome"></i>&nbsp;ACTUALIZACIÓN WEB VENTAS</h5>
                 <p class="card-text">Actualización de página web de ventas y su integración con ERP.</p>
                 <button type="button" class="btn btn-info" data-toggle="modal" data-target="#webstewardModal">
                   Detalle
@@ -751,7 +732,7 @@
           <div class="col-sm-3">
             <div class="card">
               <div class="card-body">
-                <h5 class="card-title">GUARDARROPÍA GATEGOURMET</h5>
+                <h5 class="card-title"><i class="fas fa-tshirt"></i>&nbsp;GUARDARROPÍA GOURMET</h5>
                 <p class="card-text">Aplicación para enrolamiento de usuarios y gestión de sus uniformes.</p>
                 <button type="button" class="btn btn-info" data-toggle="modal" data-target="#ggategourmetModal">
                   Detalle
@@ -762,7 +743,7 @@
           <div class="col-sm-3">
             <div class="card">
               <div class="card-body">
-                <h5 class="card-title">ADMIN INFO NUTRICIONAL</h5>
+                <h5 class="card-title"><i class="fab fa-nutritionix"></i>&nbsp;ADMIN INFO NUTRICIONAL</h5>
                 <p class="card-text">WebApp para administración de productos pesables.</p>
                 <button type="button" class="btn btn-info" data-toggle="modal" data-target="#infonutModal">
                   Detalle
@@ -773,7 +754,7 @@
           <div class="col-sm-3">
             <div class="card">
               <div class="card-body">
-                <h5 class="card-title">PRODUCTOS REFRESH</h5>
+                <h5 class="card-title"><i class="fab fa-nutritionix"></i>&nbsp;PRODUCTOS REFRESH</h5>
                 <p class="card-text">App para registro y configuración de productos de panadería y pastelería.</p>
                 <button type="button" class="btn btn-info" data-toggle="modal" data-target="#refreshModal">
                   Detalle
@@ -788,7 +769,7 @@
           <div class="col-sm-3">
             <div class="card">
               <div class="card-body">
-                <h5 class="card-title">DENUNCIA FITOSANITARIA</h5>
+                <h5 class="card-title"><i class="fas fa-exclamation-triangle"></i>&nbsp;DENUNCIA FITOSANITARIA</h5>
                 <p class="card-text">Portal para la administración y recepción de denuncias sanitarias.</p>
                 <button type="button" class="btn btn-info" data-toggle="modal" data-target="#fitoModal">
                   Detalle
@@ -799,7 +780,7 @@
           <div class="col-sm-3">
             <div class="card">
               <div class="card-body">
-                <h5 class="card-title">APP REGISTRO COMBUSTIBLES</h5>
+                <h5 class="card-title"><i class="fas fa-oil-can"></i>&nbsp;REGISTRO COMBUSTIBLES</h5>
                 <p class="card-text">App para el registro de combustible en entrega y recepción de autos.</p>
                 <button type="button" class="btn btn-info" data-toggle="modal" data-target="#combustiblesModal">
                   Detalle
@@ -810,7 +791,7 @@
           <div class="col-sm-3">
             <div class="card">
               <div class="card-body">
-                <h5 class="card-title">TRAZABILIDAD CONGELADOS</h5>
+                <h5 class="card-title"><i class="fas fa-drumstick-bite"></i>&nbsp;TRAZABILIDAD CONGELADOS</h5>
                 <p class="card-text">Aplicación para la trazabilidad de las carnes en las tiendas.</p>
                 <button type="button" class="btn btn-info" data-toggle="modal" data-target="#trazabilidadModal">
                   Detalle
@@ -821,7 +802,7 @@
           <div class="col-sm-3">
             <div class="card">
               <div class="card-body">
-                <h5 class="card-title">APORTE DE REBAJAS</h5>
+                <h5 class="card-title"><i class="far fa-money-bill-alt"></i>&nbsp;APORTE DE REBAJAS</h5>
                 <p class="card-text">Portal Web para negociación de promociones y campañas con proveedores.</p>
                 <button type="button" class="btn btn-info" data-toggle="modal" data-target="#rebajaModal">
                   Detalle
@@ -836,7 +817,7 @@
           <div class="col-sm-3">
             <div class="card">
               <div class="card-body">
-                <h5 class="card-title">OMS GROCERY</h5>
+                <h5 class="card-title"><i class="fas fa-shopping-cart"></i>&nbsp;OMS GROCERY</h5>
                 <p class="card-text">OMS para la gestión de ordenes relacionadas a mercadería de los locales.</p>
                 <button type="button" class="btn btn-info" data-toggle="modal" data-target="#groceryModal">
                   Detalle
@@ -847,7 +828,7 @@
           <div class="col-sm-3">
             <div class="card">
               <div class="card-body">
-                <h5 class="card-title">CAS</h5>
+                <h5 class="card-title"><i class="fas fa-file-invoice-dollar"></i>&nbsp;CAS</h5>
                 <p class="card-text">Portal de administración y cobros de reposiciones.</p>
                 <button type="button" class="btn btn-info" data-toggle="modal" data-target="#casModal">
                   Detalle
@@ -858,7 +839,7 @@
           <div class="col-sm-3">
             <div class="card">
               <div class="card-body">
-                <h5 class="card-title">OMS GM</h5>
+                <h5 class="card-title"><i class="fas fa-store-alt"></i>&nbsp;OMS GM</h5>
                 <p class="card-text">OMS para la gestión de ordenes relacionadas a mercadería general.</p>
                 <button type="button" class="btn btn-info" data-toggle="modal" data-target="#gmModal">
                   Detalle
@@ -869,7 +850,7 @@
           <div class="col-sm-3">
             <div class="card">
               <div class="card-body">
-                <h5 class="card-title">PORTAL PRECIOS Y AJUSTES</h5>
+                <h5 class="card-title"><i class="fas fa-chart-pie"></i>&nbsp;PORTAL PRECIOS</h5>
                 <p class="card-text">Portal con indicadores de precios y reportería asociada.</p>
                 <button type="button" class="btn btn-info" data-toggle="modal" data-target="#preciosModal">
                   Detalle
@@ -884,7 +865,7 @@
           <div class="col-sm-3">
             <div class="card">
               <div class="card-body">
-                <h5 class="card-title">PORTAL RYP</h5>
+                <h5 class="card-title"><i class="fas fa-chart-pie"></i>&nbsp;PORTAL RYP</h5>
                 <p class="card-text">Portal para administración de rutinas y procedimientos internos.</p>
                 <button type="button" class="btn btn-info" data-toggle="modal" data-target="#rutinasModal">
                   Detalle
@@ -895,7 +876,7 @@
           <div class="col-sm-3">
             <div class="card">
               <div class="card-body">
-                <h5 class="card-title">CAR WEB SERVICES</h5>
+                <h5 class="card-title"><i class="fas fa-car-side"></i>&nbsp;CAR WEB SERVICES</h5>
                 <p class="card-text">Web Service con información general de vehículos.</p>
                 <button type="button" class="btn btn-info" data-toggle="modal" data-target="#carModal">
                   Detalle
@@ -906,7 +887,7 @@
           <div class="col-sm-3">
             <div class="card">
               <div class="card-body">
-                <h5 class="card-title">RENOVACIÓN HTML</h5>
+                <h5 class="card-title"><i class="fab fa-html5"></i>&nbsp;RENOVACIÓN HTML</h5>
                 <p class="card-text">Cambio de diseño web para cliente bancario.</p>
                 <button type="button" class="btn btn-info" data-toggle="modal" data-target="#renovacionModal">
                   Detalle
@@ -917,7 +898,7 @@
           <div class="col-sm-3">
             <div class="card">
               <div class="card-body">
-                <h5 class="card-title">CREDIT SYSTEM</h5>
+                <h5 class="card-title"><i class="fab fa-html5"></i>&nbsp;CREDIT SYSTEM</h5>
                 <p class="card-text">Desarrollo interno para la gestión de créditos bancarios.</p>
                 <button type="button" class="btn btn-info" data-toggle="modal" data-target="#creditModal">
                   Detalle
@@ -932,9 +913,20 @@
       <br />
       <section id="section-byebye">
         <p class="lead mb-5">
-          <strong>Si has llegado hasta aquí te dejo invitado a contactarme mediante mi celular o mis redes sociales.
-            Siempre estoy dispuesto a escuchar ofertas, reclamos y sugerencias <span style="font-size:20px;">😀</span></strong>
-        <h4 class="mb-4">Carlos Tognarell Ross +56988492281</h4>
+          <strong><i class="far fa-calendar-check"></i>&nbsp;Si has llegado hasta aquí te dejo cordialmente invitado a contactarme mediante mi celular o mis redes sociales.
+            Siempre estoy dispuesto a escuchar ofertas, sugerencias y reclamos <span style="font-size:20px;">😀</span>.</strong>
+                </p>
+        <p class="lead mb-5">
+          <strong><i class="fab fa-github"></i>&nbsp;Si te ha gustado el formato un poco mas informal de éste curriculum puedes descargarlo desde github en el 
+            siguiente enlace: 
+            <a href="https://github.com/carlostognarell/cvweb.git" target="_blank">https://github.com/carlostognarell/cvweb.git</a>
+          </strong>
+        </p>
+        <p class="lead mb-5">
+          <strong><i class="fas fa-gamepad"></i> Si te gustan los videojuegos puedes encontrarme en plataformas como Playstation, 
+            Nintendo Switch, Steam o Xbox con el ID Carlman619.
+          </strong>
+          <h4 class="mb-4">Carlos Tognarell Ross +56988492281</h4>
         </p>
       </section>
     </div>
